--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@fontsource/roboto": "^5.0.14",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^7.13.0",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-imask": "^7.6.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
